<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MessageActivity">
    <TextView
        android:id="@+id/senderFull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sender_name"
        android:textSize="12pt"/>
    <TextView
        android:id="@+id/timeFull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/senderFull"
        android:text="@string/time"
        android:textSize="8pt"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C0C0C0"
        android:layout_below="@id/timeFull"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/messageFull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeFull"
        android:layout_marginTop="15dp"
        android:text="@string/full_message"
        android:textSize="10pt"
        android:textColor="#000000"/>
</RelativeLayout>
